# leptos_notes_minirep

./: .gitignore  Cargo.toml  Trunk.toml  index.html  leptosfmt.toml  rust-toolchain.toml  service-worker.js
manifest/: manifest.json
src/: main.rs
style/: style.css
